@@ -1,3 +1,12 @@
+2008-10-26  Dan Williams  <dcbw@redhat.com>
+
+	Patch from Tambet Ingo <tambet@gmail.com>
+
+	* src/applet-device-cdma.c
+	  src/applet-device-gsm.c
+	  src/connection-editor/nm-connection-list.c
+		- Use setting object accessors
+
 2008-10-24  Dan Williams  <dcbw@redhat.com>
 
 	* src/connection-editor/nm-connection-editor.c
